<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="reservationDate">Date of Reservation:</string>
    <string name="reservationTime">Time of Reservation:</string>
    <string name="checkSmokers">Are there any smokers?</string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnClear">Clear</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="numPax">Number of PAX</string>
    <string name="reservation_form">Reservation Form</string>

</resources>